--- a/index.html
+++ b/index.html
@@ -1,1 +1,89 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+  <header>
+    <span>WebStudio</span>
+    <menu>
+        <li>
+            <a class="studio" href="https://www.devstudio.com/studio">Студия</a>
+        </li>
+        <li>Портфолио</li>
+        <li>Контакты</li>
+        <li>
+            <a class="email-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li>+38 096 111 11 11</li>
+    </menu>    
+  </header> 
+  <section>
+        <h1>Эффективные решения для вашего бизнеса</h1>
+        <button type="submit">Заказать услугу</button>
+  </section>
+  <ul>
+      <li>
+          <h4>Внимание к деталям</h4>
+          <span>Идейные соображения, а также начало повседневной работы по формированию позиции.</span>
+      </li>
+      <li>
+          <h4>Пунктуальность</h4>
+          <span>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</span>
+      </li>
+      <li>
+          <h4>Планирование</h4>
+          <span>Равным образом консультация с широким активом в значительной степени обуславливает.</span>
+      </li>
+      <li>
+          <h4>Современные технологии</h4>
+          <span>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</span>
+      </li>
+  </ul>
+  <section>
+    <h3>Чем мы занимаемся</h3>
+    <p>
+      <img src="./images/eff34a388bbc6409758a002e5a58c3ca.jfif" alt="software developer working" width="370" height="294">
+      <img src="./images/fe209b7db875477ca0f844823574082d.jfif" alt="women with a phone" width="370" height="294">
+      <img src="./images/ff490664ba91f138b9f708e01d65306a.jfif" alt="women working on a tablet" width="370" height="294">
+    </p>
+  </section>
+  <section>
+      <h3>Наша команда</h3>
+      <ul>
+          <li>
+            <img src="./images/01b0562402f9066520924acac0be8dc7.jfif" alt="friendly men in glasses" width="270" height="260">
+            <h6>Игорь Демьяненко</h6>
+            <span>Product Designer</span>
+          </li>
+          <li>
+            <img src="./images/8ed9ff0c05008e3e7ae5285b05efd211.jfif" alt="blonde women" width="270" height="260">
+            <h6>Ольга Репина</h6>
+            <span>Frontend Developer</span>
+          </li>
+          <li>
+            <img src="./images/c03fb848ed9dfc89543bbe97156c3661.jfif" alt="smiling men" width="270" height="260">
+            <h6>Николай Тарасов</h6>
+            <span>Marketing</span>
+          </li>
+          <li>
+            <img src="./images/7ff905b2d5f56aa0d2b29aa48e997cd8.jfif" alt="friendly men in black t-shirt" width="270" height="260">
+            <h6>Михаил Ермаков</h6>
+            <span>UI Designer</span>
+          </li>
+      </ul>
+  </section>
+  <footer>
+      <p>WebStudio</p>
+      <ul>
+          <li>г. Киев, пр-т Леси Украинки, 26</li>
+          <li>info@example.com</li>
+          <li>+38 099 111 11 11</li>
+      </ul>
+  </footer>
+</body>
+</html>
 
