--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
 </head>
 <body>
   <header>
-    <span>WebStudio</span>
-    <menu>
+    <a class="logo" href=""><span>Web</span>Studio</a>
+    <nav>
         <li>
             <a class="studio" href="https://www.devstudio.com/studio">Студия</a>
         </li>
         <li>Портфолио</li>
         <li>Контакты</li>
+      <div> 
         <li>
             <a class="email-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
         <li>+38 096 111 11 11</li>
-    </menu>    
+      </div>
+    </nav>    
   </header> 
   <section>
         <h1>Эффективные решения для вашего бизнеса</h1>
@@ -27,28 +29,30 @@
   </section>
   <ul>
       <li>
-          <h4>Внимание к деталям</h4>
-          <span>Идейные соображения, а также начало повседневной работы по формированию позиции.</span>
+          <h3>Внимание к деталям</h3>
+          <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
       </li>
       <li>
-          <h4>Пунктуальность</h4>
-          <span>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</span>
+          <h3>Пунктуальность</h3>
+          <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
       </li>
       <li>
-          <h4>Планирование</h4>
-          <span>Равным образом консультация с широким активом в значительной степени обуславливает.</span>
+          <h3>Планирование</h3>
+          <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
       </li>
       <li>
-          <h4>Современные технологии</h4>
-          <span>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</span>
+          <h3>Современные технологии</h3>
+          <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
       </li>
   </ul>
   <section>
     <h3>Чем мы занимаемся</h3>
     <p>
-      <img src="./images/eff34a388bbc6409758a002e5a58c3ca.jfif" alt="software developer working" width="370" height="294">
-      <img src="./images/fe209b7db875477ca0f844823574082d.jfif" alt="women with a phone" width="370" height="294">
-      <img src="./images/ff490664ba91f138b9f708e01d65306a.jfif" alt="women working on a tablet" width="370" height="294">
+      <ul>
+        <li><img src="./images/eff34a388bbc6409758a002e5a58c3ca.jfif" alt="software developer working" width="370" height="294"></li>
+        <li><img src="./images/fe209b7db875477ca0f844823574082d.jfif" alt="women with a phone" width="370" height="294"></li>
+        <li><img src="./images/ff490664ba91f138b9f708e01d65306a.jfif" alt="women working on a tablet" width="370" height="294"></li>
+      </ul>
     </p>
   </section>
   <section>
@@ -56,23 +60,23 @@
       <ul>
           <li>
             <img src="./images/01b0562402f9066520924acac0be8dc7.jfif" alt="friendly men in glasses" width="270" height="260">
-            <h6>Игорь Демьяненко</h6>
-            <span>Product Designer</span>
+            <h3>Игорь Демьяненко</h3>
+            <p>Product Designer</p>
           </li>
           <li>
             <img src="./images/8ed9ff0c05008e3e7ae5285b05efd211.jfif" alt="blonde women" width="270" height="260">
-            <h6>Ольга Репина</h6>
-            <span>Frontend Developer</span>
+            <h3>Ольга Репина</h3>
+            <p>Frontend Developer</p>
           </li>
           <li>
             <img src="./images/c03fb848ed9dfc89543bbe97156c3661.jfif" alt="smiling men" width="270" height="260">
-            <h6>Николай Тарасов</h6>
-            <span>Marketing</span>
+            <h3>Николай Тарасов</h3>
+            <p>Marketing</p>
           </li>
           <li>
             <img src="./images/7ff905b2d5f56aa0d2b29aa48e997cd8.jfif" alt="friendly men in black t-shirt" width="270" height="260">
-            <h6>Михаил Ермаков</h6>
-            <span>UI Designer</span>
+            <h3>Михаил Ермаков</h3>
+            <p>UI Designer</p>
           </li>
       </ul>
   </section>
