--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,18 +8,22 @@
 </head>
 <body>
   <header>
-    <a class="logo" href=""><span>Web</span>Studio</a>
+    <a class="logo" href="" lang="en"><span>Web</span>Studio</a>
     <nav>
+      <ul>
         <li>
             <a class="studio" href="https://www.devstudio.com/studio">Студия</a>
         </li>
         <li>Портфолио</li>
         <li>Контакты</li>
+      </ul>
       <div> 
+      <ul>
         <li>
-            <a class="email-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="email-link" href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a>
         </li>
         <li>+38 096 111 11 11</li>
+      </ul>
       </div>
     </nav>    
   </header> 
@@ -49,9 +53,15 @@
     <h3>Чем мы занимаемся</h3>
     <p>
       <ul>
-        <li><img src="./images/what_we_do/what_we_do_1.jfif" alt="software developer working" width="370" height="294"></li>
-        <li><img src="./images/what_we_do/what_we_do_2.jfif" alt="women with a phone" width="370" height="294"></li>
-        <li><img src="./images/what_we_do/what_we_do_3.jfif" alt="women working on a tablet" width="370" height="294"></li>
+        <li>
+          <img src="./images/what_we_do/what_we_do_1.jfif" alt="software developer working" width="370" height="294" lang="en">
+        </li>
+        <li>
+          <img src="./images/what_we_do/what_we_do_2.jfif" alt="women with a phone" width="370" height="294" lang="en">
+        </li>
+        <li>
+          <img src="./images/what_we_do/what_we_do_3.jfif" alt="women working on a tablet" width="370" height="294" lang="en">
+        </li>
       </ul>
     </p>
   </section>
@@ -59,33 +69,33 @@
       <h3>Наша команда</h3>
       <ul>
           <li>
-            <img src="./images/01b0562402f9066520924acac0be8dc7.jfif" alt="friendly men in glasses" width="270" height="260">
+            <img src="./images/our_masters/master_1.jfif" alt="friendly men in glasses" width="270" height="260" lang="en">
             <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <p lang="en">Product Designer</p>
           </li>
           <li>
-            <img src="./images/8ed9ff0c05008e3e7ae5285b05efd211.jfif" alt="blonde women" width="270" height="260">
+            <img src="./images/our_masters/master_2.jfif" alt="blonde women" width="270" height="260" lang="en">
             <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <p lang="en">Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/c03fb848ed9dfc89543bbe97156c3661.jfif" alt="smiling men" width="270" height="260">
+            <img src="./images/our_masters/master_3.jfif" alt="smiling men" width="270" height="260" lang="en">
             <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
+            <p lang="en">Marketing</p>
           </li>
           <li>
-            <img src="./images/7ff905b2d5f56aa0d2b29aa48e997cd8.jfif" alt="friendly men in black t-shirt" width="270" height="260">
+            <img src="./images/our_masters/master_4.jfif" alt="friendly men in black t-shirt" width="270" height="260" lang="en">
             <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <p lang="en">UI Designer</p>
           </li>
       </ul>
   </section>
   <footer>
       <p>WebStudio</p>
+      <p>г. Киев, пр-т Леси Украинки, 26</p>
       <ul>
-          <li>г. Киев, пр-т Леси Украинки, 26</li>
-          <li>info@example.com</li>
-          <li>+38 099 111 11 11</li>
+          <li><a class="email-link-footer" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a class="tel-footer" href="tel:+380991111111">+38 099 111 11 11</a></li>
       </ul>
   </footer>
 </body>
