--- a/index.html
+++ b/index.html
@@ -1,103 +1,110 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
+
 <body>
   <header>
     <a class="logo" href="" lang="en"><span>Web</span>Studio</a>
     <nav>
       <ul>
         <li>
-            <a class="studio" href="https://www.devstudio.com/studio">Студия</a>
+          <a class="studio" href="https://www.devstudio.com/studio">Студия</a>
         </li>
-        <li>Портфолио</li>
-        <li>Контакты</li>
-      </ul>
-      <div> 
-      <ul>
         <li>
-            <a class="email-link" href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a>
+          <a class="portfolio" href="https://www.devstudio.com/portfolio">Портфолио</a>
         </li>
-        <li>+38 096 111 11 11</li>
+        <li>
+          <a class="contacts" href="https://www.devstudio.com/portfolio">Контакты</a>
+        </li>
       </ul>
+      <div>
+        <ul>
+          <li>
+            <a class="email-link" href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a>
+          </li>
+          <li>+38 096 111 11 11</li>
+        </ul>
       </div>
-    </nav>    
-  </header> 
+    </nav>
+  </header>
   <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="submit">Заказать услугу</button>
+    <h1>Эффективные решения для вашего бизнеса</h1>
+    <button type="submit">Заказать услугу</button>
   </section>
   <ul>
-      <li>
-          <h3>Внимание к деталям</h3>
-          <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-      </li>
-      <li>
-          <h3>Пунктуальность</h3>
-          <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-      </li>
-      <li>
-          <h3>Планирование</h3>
-          <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-      </li>
-      <li>
-          <h3>Современные технологии</h3>
-          <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-      </li>
+    <li>
+      <h3>Внимание к деталям</h3>
+      <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+    </li>
+    <li>
+      <h3>Пунктуальность</h3>
+      <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+    </li>
+    <li>
+      <h3>Планирование</h3>
+      <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+    </li>
+    <li>
+      <h3>Современные технологии</h3>
+      <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+    </li>
   </ul>
   <section>
     <h3>Чем мы занимаемся</h3>
-    <p>
-      <ul>
-        <li>
-          <img src="./images/what_we_do/what_we_do_1.jfif" alt="software developer working" width="370" height="294" lang="en">
-        </li>
-        <li>
-          <img src="./images/what_we_do/what_we_do_2.jfif" alt="women with a phone" width="370" height="294" lang="en">
-        </li>
-        <li>
-          <img src="./images/what_we_do/what_we_do_3.jfif" alt="women working on a tablet" width="370" height="294" lang="en">
-        </li>
-      </ul>
-    </p>
+    <ul>
+      <li>
+        <img src="./images/what_we_do/what_we_do_1.jfif" alt="software developer working" width="370" height="294"
+          lang="en">
+      </li>
+      <li>
+        <img src="./images/what_we_do/what_we_do_2.jfif" alt="women with a phone" width="370" height="294" lang="en">
+      </li>
+      <li>
+        <img src="./images/what_we_do/what_we_do_3.jfif" alt="women working on a tablet" width="370" height="294"
+          lang="en">
+      </li>
+    </ul>
   </section>
   <section>
-      <h3>Наша команда</h3>
-      <ul>
-          <li>
-            <img src="./images/our_masters/master_1.jfif" alt="friendly men in glasses" width="270" height="260" lang="en">
-            <h3>Игорь Демьяненко</h3>
-            <p lang="en">Product Designer</p>
-          </li>
-          <li>
-            <img src="./images/our_masters/master_2.jfif" alt="blonde women" width="270" height="260" lang="en">
-            <h3>Ольга Репина</h3>
-            <p lang="en">Frontend Developer</p>
-          </li>
-          <li>
-            <img src="./images/our_masters/master_3.jfif" alt="smiling men" width="270" height="260" lang="en">
-            <h3>Николай Тарасов</h3>
-            <p lang="en">Marketing</p>
-          </li>
-          <li>
-            <img src="./images/our_masters/master_4.jfif" alt="friendly men in black t-shirt" width="270" height="260" lang="en">
-            <h3>Михаил Ермаков</h3>
-            <p lang="en">UI Designer</p>
-          </li>
-      </ul>
+    <h3>Наша команда</h3>
+    <ul>
+      <li>
+        <img src="./images/our_masters/master_1.jfif" alt="friendly men in glasses" width="270" height="260" lang="en">
+        <h3>Игорь Демьяненко</h3>
+        <p lang="en">Product Designer</p>
+      </li>
+      <li>
+        <img src="./images/our_masters/master_2.jfif" alt="blonde women" width="270" height="260" lang="en">
+        <h3>Ольга Репина</h3>
+        <p lang="en">Frontend Developer</p>
+      </li>
+      <li>
+        <img src="./images/our_masters/master_3.jfif" alt="smiling men" width="270" height="260" lang="en">
+        <h3>Николай Тарасов</h3>
+        <p lang="en">Marketing</p>
+      </li>
+      <li>
+        <img src="./images/our_masters/master_4.jfif" alt="friendly men in black t-shirt" width="270" height="260"
+          lang="en">
+        <h3>Михаил Ермаков</h3>
+        <p lang="en">UI Designer</p>
+      </li>
+    </ul>
   </section>
   <footer>
-      <p>WebStudio</p>
-      <p>г. Киев, пр-т Леси Украинки, 26</p>
-      <ul>
-          <li><a class="email-link-footer" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a class="tel-footer" href="tel:+380991111111">+38 099 111 11 11</a></li>
-      </ul>
+    <a class="logo_footer" href="" lang="en"><span>Web</span>Studio</a>
+    <p>г. Киев, пр-т Леси Украинки, 26</p>
+    <ul>
+      <li><a class="email-link-footer" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      <li><a class="tel-footer" href="tel:+380991111111">+38 099 111 11 11</a></li>
+    </ul>
   </footer>
 </body>
-</html>
 
+</html>
