--- a/index.html
+++ b/index.html
@@ -33,70 +33,73 @@
       </div>
     </nav>
   </header>
-  <section>
-    <h1>Эффективные решения для вашего бизнеса</h1>
-    <button type="submit">Заказать услугу</button>
-  </section>
-  <ul>
-    <li>
-      <h3>Внимание к деталям</h3>
-      <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-    </li>
-    <li>
-      <h3>Пунктуальность</h3>
-      <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-    </li>
-    <li>
-      <h3>Планирование</h3>
-      <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-    </li>
-    <li>
-      <h3>Современные технологии</h3>
-      <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-    </li>
-  </ul>
-  <section>
-    <h3>Чем мы занимаемся</h3>
+  <main>
+    <section>
+      <h1>Эффективные решения для вашего бизнеса</h1>
+      <button type="submit">Заказать услугу</button>
+    </section>
     <ul>
       <li>
-        <img src="./images/what_we_do/what_we_do_1.jfif" alt="software developer working" width="370" height="294"
-          lang="en">
+        <h3>Внимание к деталям</h3>
+        <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
       </li>
       <li>
-        <img src="./images/what_we_do/what_we_do_2.jfif" alt="women with a phone" width="370" height="294" lang="en">
+        <h3>Пунктуальность</h3>
+        <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
       </li>
       <li>
-        <img src="./images/what_we_do/what_we_do_3.jfif" alt="women working on a tablet" width="370" height="294"
-          lang="en">
+        <h3>Планирование</h3>
+        <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+      </li>
+      <li>
+        <h3>Современные технологии</h3>
+        <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
       </li>
     </ul>
-  </section>
-  <section>
-    <h3>Наша команда</h3>
-    <ul>
-      <li>
-        <img src="./images/our_masters/master_1.jfif" alt="friendly men in glasses" width="270" height="260" lang="en">
-        <h3>Игорь Демьяненко</h3>
-        <p lang="en">Product Designer</p>
-      </li>
-      <li>
-        <img src="./images/our_masters/master_2.jfif" alt="blonde women" width="270" height="260" lang="en">
-        <h3>Ольга Репина</h3>
-        <p lang="en">Frontend Developer</p>
-      </li>
-      <li>
-        <img src="./images/our_masters/master_3.jfif" alt="smiling men" width="270" height="260" lang="en">
-        <h3>Николай Тарасов</h3>
-        <p lang="en">Marketing</p>
-      </li>
-      <li>
-        <img src="./images/our_masters/master_4.jfif" alt="friendly men in black t-shirt" width="270" height="260"
-          lang="en">
-        <h3>Михаил Ермаков</h3>
-        <p lang="en">UI Designer</p>
-      </li>
-    </ul>
-  </section>
+    <section>
+      <h3>Чем мы занимаемся</h3>
+      <ul>
+        <li>
+          <img src="./images/what_we_do/what_we_do_1.jfif" alt="software developer working" width="370" height="294"
+            lang="en">
+        </li>
+        <li>
+          <img src="./images/what_we_do/what_we_do_2.jfif" alt="women with a phone" width="370" height="294" lang="en">
+        </li>
+        <li>
+          <img src="./images/what_we_do/what_we_do_3.jfif" alt="women working on a tablet" width="370" height="294"
+            lang="en">
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h3>Наша команда</h3>
+      <ul>
+        <li>
+          <img src="./images/our_masters/master_1.jfif" alt="friendly men in glasses" width="270" height="260"
+            lang="en">
+          <h3>Игорь Демьяненко</h3>
+          <p lang="en">Product Designer</p>
+        </li>
+        <li>
+          <img src="./images/our_masters/master_2.jfif" alt="blonde women" width="270" height="260" lang="en">
+          <h3>Ольга Репина</h3>
+          <p lang="en">Frontend Developer</p>
+        </li>
+        <li>
+          <img src="./images/our_masters/master_3.jfif" alt="smiling men" width="270" height="260" lang="en">
+          <h3>Николай Тарасов</h3>
+          <p lang="en">Marketing</p>
+        </li>
+        <li>
+          <img src="./images/our_masters/master_4.jfif" alt="friendly men in black t-shirt" width="270" height="260"
+            lang="en">
+          <h3>Михаил Ермаков</h3>
+          <p lang="en">UI Designer</p>
+        </li>
+      </ul>
+    </section>
+  </main>
   <footer>
     <a class="logo_footer" href="" lang="en"><span>Web</span>Studio</a>
     <p>г. Киев, пр-т Леси Украинки, 26</p>
