--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <a class="studio" href="https://www.devstudio.com/studio">Студия</a>
         </li>
         <li>
-          <a class="portfolio" href="/portfolio.html">Портфолио</a>
+          <a class="portfolio" href="./portfolio.html">Портфолио</a>
         </li>
         <li>
           <a class="contacts" href="https://www.devstudio.com/portfolio">Контакты</a>
