--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
     <nav>
         <ul>
             <li>
-                <a class="studio" href="/index.html">Студия</a>
+                <a class="studio" href="./index.html">Студия</a>
             </li>
             <li>
                 <a class="portfolio" href="https://www.devstudio.com/portfolio">Портфолио</a>
