--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
                 <a class="studio" href="./index.html">Студия</a>
             </li>
             <li>
-                <a class="portfolio" href="https://www.devstudio.com/portfolio">Портфолио</a>
+                <a class="portfolio" href="./portfolio.html">Портфолио</a>
             </li>
             <li>
                 <a class="contacts" href="https://www.devstudio.com/portfolio">Контакты</a>
