--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav>
       <ul>
         <li>
-          <a class="studio" href="https://www.devstudio.com/studio">Студия</a>
+          <a class="studio" href="./index.html">Студия</a>
         </li>
         <li>
           <a class="portfolio" href="./portfolio.html">Портфолио</a>
