--- a/portfolio.html
+++ b/portfolio.html
@@ -38,19 +38,19 @@
     <h2 hidden>Наши работы</h2>
     <ul>
       <li>
-        <button type="submit">Все</button>
+        <button type="button">Все</button>
       </li>
       <li>
-        <button type="submit">Веб-сайты</button>
+        <button type="button">Веб-сайты</button>
       </li>
       <li>
-        <button type="submit">Приложения</button>
+        <button type="button">Приложения</button>
       </li>
       <li>
-        <button type="submit">Дизайн</button>
+        <button type="button">Дизайн</button>
       </li>
       <li>
-        <button type="submit">Маркетинг</button>
+        <button type="button">Маркетинг</button>
       </li>
     </ul>
     <ul>
@@ -58,63 +58,63 @@
         <h2>Технокряк</h2>
         <p>Веб-сайт</p>
         <a class="list-items" href="">
-            <img src="./images/portfolio/portfolio-1.jpg" alt="laptop desctop">
+            <img src="./images/portfolio/portfolio-1.jpg" alt="laptop desctop" width="370">
         </a>
       </li>
       <li>
         <h2>Постер New Orlean vs Golden Star</h2>
         <p>Дизайн</p>
         <a class="list-items" href="">
-            <img src="./images/portfolio/portfolio-2.jpg" alt="two basketball players">
+            <img src="./images/portfolio/portfolio-2.jpg" alt="two basketball players" width="370">
         </a>
       </li>
       <li>
         <h2>Ресторан Seafood</h2>
         <p>Приложение</p>
         <a class="list-items" href="">
-            <img src="./images/portfolio/portfolio-3.jpg" alt="fish restaurant logo">
+            <img src="./images/portfolio/portfolio-3.jpg" alt="fish restaurant logo" width="370">
         </a>
       </li>
       <li>
         <h2>Проект Prime</h2>
         <p>Маркетинг</p>
         <a class="list-items" href="">
-            <img src="./images/portfolio/portfolio-4.jpg" alt="headphones">
+            <img src="./images/portfolio/portfolio-4.jpg" alt="headphones" width="370">
         </a>
       </li>
       <li>
         <h2>Проект Boxes</h2>
         <p>Приложение</p>
         <a class="list-items" href="">
-            <img src="./images/portfolio/portfolio-5.jpg" alt="two boxes">
+            <img src="./images/portfolio/portfolio-5.jpg" alt="two boxes" width="370">
         </a>
       </li>
       <li>
         <h2>Inspiration has no Borders</h2>
         <p>Веб-сайт</p>
         <a class="list-items" href="">
-            <img src="./images/portfolio/portfolio-6.jpg" alt="computer display">
+            <img src="./images/portfolio/portfolio-6.jpg" alt="computer display" width="370">
         </a>
       </li>
       <li>
         <h2>Издание Limited Edition</h2>
         <p>Дизайн</p>
         <a class="list-items" href="">
-            <img src="./images/portfolio/portfolio-7.jpg" alt="opened magazine">
+            <img src="./images/portfolio/portfolio-7.jpg" alt="opened magazine" width="370">
         </a>
       </li>
       <li>
         <h2>Проект LAB</h2>
         <p>Маркетинг</p>
         <a class="list-items" href="">
-            <img src="./images/portfolio/portfolio-8.jpg" alt="some label">
+            <img src="./images/portfolio/portfolio-8.jpg" alt="some label" width="370">
         </a>
       </li>
       <li>
         <h2>Growing Business</h2>
         <p>Приложение</p>
         <a class="list-items" href="">
-            <img src="./images/portfolio/portfolio-9.jpg" alt="man working on a laptop">
+            <img src="./images/portfolio/portfolio-9.jpg" alt="man working on a laptop" width="370">
         </a>
       </li>
     </ul>
