homework 2 beta version

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
   <!-- HEADER -->
   <header class="header">
-    <a class="logo link" href="" lang="en">Web<span class="logo-studio-header" lang="en">Studio</span></a>
+    <a class="logo link" href="./index.html" lang="en">Web<span class="logo-studio-header" lang="en">Studio</span></a>
     <nav class="menu">
       <ul class="list">
         <li class="nav-item">
@@ -116,7 +116,7 @@
   </main>
   <!-- FOOTER -->
   <footer class="footer">
-    <a class="logo link" href="" lang="en">Web<span class="logo-studio-footer" lang="en">Studio</span></a>
+    <a class="logo link" href="./index.html" lang="en">Web<span class="logo-studio-footer" lang="en">Studio</span></a>
     <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
     <ul class="address-list list">
       <li class="address-list-item">
