--- a/portfolio.html
+++ b/portfolio.html
@@ -17,11 +17,11 @@
 
 <body>
   <header>
-    <a class="logo link" href="" lang="en">Web<span class="logo-studio-header" lang="en">Studio</span></a>
+    <a class="logo link" href="./index.html" lang="en">Web<span class="logo-studio-header" lang="en">Studio</span></a>
     <nav class="menu">
       <ul class="list">
         <li class="nav-item">
-          <a class="nav-link" href="/index.html">Студия</a>
+          <a class="nav-link" href="./index.html">Студия</a>
         </li>
         <li class="nav-item">
           <a class="nav-link current" href="https://www.devstudio.com/portfolio">Портфолио</a>
@@ -64,66 +64,66 @@
       </ul>
       <ul class="examples-img-list list">
         <li class="examples-img-item">
-          <h2 class="examples-img-title">Технокряк</h2>
-          <p class="examples-img-about">Веб-сайт</p>
-          <a class="list-items" href="">
+          <a class="list-items link" href="">
             <img class="img" src="./images/portfolio/portfolio-1.jpg" alt="laptop desctop">
+            <h2 class="examples-img-title">Технокряк</h2>
+            <p class="examples-img-about">Веб-сайт</p>
           </a>
         </li>
         <li class="examples-img-item">
-          <h2 class="examples-img-title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
-          <p class="examples-img-about">Дизайн</p>
-          <a class="list-items" href="">
+          <a class="list-items link" href="">
             <img class="img" src="./images/portfolio/portfolio-2.jpg" alt="two basketball players">
+            <h2 class="examples-img-title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+            <p class="examples-img-about">Дизайн</p>
           </a>
         </li>
         <li class="examples-img-item">
-          <h2 class="examples-img-title">Ресторан <span lang="en">Seafood</span></h2>
-          <p class="examples-img-about">Приложение</p>
-          <a class="list-items" href="">
+          <a class="list-items link" href="">
             <img class="img" src="./images/portfolio/portfolio-3.jpg" alt="fish restaurant logo">
+            <h2 class="examples-img-title">Ресторан <span lang="en">Seafood</span></h2>
+            <p class="examples-img-about">Приложение</p>
           </a>
         </li>
         <li class="examples-img-item">
-          <h2 class="examples-img-title">Проект <span lang="en">Prime</span></h2>
-          <p class="examples-img-about">Маркетинг</p>
-          <a class="list-items" href="">
+          <a class="list-items link" href="">
             <img class="img" src="./images/portfolio/portfolio-4.jpg" alt="headphones">
+            <h2 class="examples-img-title">Проект <span lang="en">Prime</span></h2>
+            <p class="examples-img-about">Маркетинг</p>
           </a>
         </li>
         <li class="examples-img-item">
-          <h2 class="examples-img-title">Проект <span lang="en">Boxes</span></h2>
-          <p class="examples-img-about">Приложение</p>
-          <a class="list-items" href="">
+          <a class="list-items link" href="">
             <img class="img" src="./images/portfolio/portfolio-5.jpg" alt="two boxes">
+            <h2 class="examples-img-title">Проект <span lang="en">Boxes</span></h2>
+            <p class="examples-img-about">Приложение</p>
           </a>
         </li>
         <li class="examples-img-item">
-          <h2 class="examples-img-title" lang="en">Inspiration has no Borders</h2>
-          <p class="examples-img-about">Веб-сайт</p>
-          <a class="list-items" href="">
+          <a class="list-items link" href="">
             <img class="img" src="./images/portfolio/portfolio-6.jpg" alt="computer display">
+            <h2 class="examples-img-title" lang="en">Inspiration has no Borders</h2>
+            <p class="examples-img-about">Веб-сайт</p>
           </a>
         </li>
         <li class="examples-img-item">
-          <h2 class="examples-img-title">Издание <span lang="en">Limited Edition</span></h2>
-          <p class="examples-img-about">Дизайн</p>
-          <a class="list-items" href="">
+          <a class="list-items link" href="">
             <img class="img" src="./images/portfolio/portfolio-7.jpg" alt="opened magazine">
+            <h2 class="examples-img-title">Издание <span lang="en">Limited Edition</span></h2>
+            <p class="examples-img-about">Дизайн</p>
           </a>
         </li>
         <li class="examples-img-item">
-          <h2 class="examples-img-title">Проект <span lang="en">LAB</span></h2>
-          <p class="examples-img-about">Маркетинг</p>
-          <a class="list-items" href="">
+          <a class="list-items link" href="">
             <img class="img" src="./images/portfolio/portfolio-8.jpg" alt="some label">
+            <h2 class="examples-img-title">Проект <span lang="en">LAB</span></h2>
+            <p class="examples-img-about">Маркетинг</p>
           </a>
         </li>
         <li class="examples-img-item">
-          <h2 class="examples-img-title" lang="en">Growing Business</h2>
-          <p class="examples-img-about">Приложение</p>
-          <a class="list-items" href="">
+          <a class="list-items link" href="">
             <img class="img" src="./images/portfolio/portfolio-9.jpg" alt="man working on a laptop">
+            <h2 class="examples-img-title" lang="en">Growing Business</h2>
+            <p class="examples-img-about">Приложение</p>
           </a>
         </li>
       </ul>
